--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-*{
+
+* {
     margin: 0px;
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -8,135 +9,228 @@
     display: grid;
     grid-template-columns: 1fr 4fr;
 }
-.menu-container{
-    padding-left:1rem;
+
+.menu-container {
+    padding-left: 1rem;
+    padding-right: 1rem;
     background-color: rgb(52, 123, 255);
     color: white;
-    display:grid;
+    display: grid;
+    grid-template-rows: 10rem 12rem 10rem;
     align-items: center;
-    grid-row:1/4;
+    grid-row: 1/5;
+    font-weight:500;
 }
 
 
 .menu-title {
-    padding-top:3rem;
-    display:grid;
+    padding-top: 3rem;
+    display: grid;
     grid-template-columns: 1fr 4fr;
     align-items: center;
     font-size: 2.5rem;
     padding-bottom: 5rem;
 }
-.content-menu {
-    display:grid;
-    grid-template-columns: 1fr 4fr;
-    
-    grid-column: 1/2;
+.options-menu{
+padding-top:3rem;
+display:grid;
+grid-template-columns:1fr 4fr;
+align-items:center;
+font-size:1.8rem;
+
 }
+
+
+.content-menu {
+    font-size:2.5rem;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-row: 2/3;
+    grid-column: 1/2;
+    align-items:center;
+}
+
 .content-menu>p {
-    grid-column:2/6;
+    grid-column: 2/6;
     font-size: 1.8rem;
 }
-.content-area{
-    padding-top:0.5rem;
-    display:grid;
+
+.content-area {
+    padding-top: 0.5rem;
+    display: grid;
     align-items: center;
 }
-.user-bar{
-    display:grid;
+
+.user-bar {
+    display: grid;
     align-items: center;
     grid-template-columns: 3fr 2fr;
 }
-.search-bar{
+
+.search-bar {
     grid-column: 1/2;
-    display:grid;
+    display: grid;
     grid-template-columns: 30px auto;
-    padding-left:1em;
-    padding-right:1em;
-    gap:15px;
+    padding-left: 1em;
+    padding-right: 1em;
+    gap: 15px;
 }
-input{
-    border-style:none;
-    outline:none;
+
+input {
+    border-style: none;
+    outline: none;
     border-radius: 10px;
-    border-color:aliceblue;
-    background-color:rgb(233, 232, 232);
+    border-color: aliceblue;
+    background-color: rgb(233, 232, 232);
 }
-.user-data{
-    
-    grid-column:2/3;
-    display:grid;
+
+.user-data {
+
+    grid-column: 2/3;
+    display: grid;
     grid-template-columns: auto 3rem 10rem;
-    gap:20px;
+    gap: 20px;
     align-items: center;
 }
-.user-data>img{
-    align-self:center;
+
+.user-data>img {
+    align-self: center;
     justify-self: right;
 }
-.user-name{
-    font-size:2em;
+
+.user-name {
+    font-size: 2em;
     font-weight: 300;
 }
 
-.user-actions{
-    display:grid;
-    grid-template-columns:3fr 2fr;
+.user-actions {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
 }
 
-.user-greeting{
+.user-greeting {
     grid-column: 1/2;
-    grid-row:2/3;
-    padding-top:1rem;
-    padding-left:2rem;
-    display:grid;
+    grid-row: 2/3;
+    padding-top: 1rem;
+    padding-left: 2rem;
+    display: grid;
     grid-template-columns: 8rem auto;
     align-items: center;
 }
-.wrapper>p:nth-child(2){
+
+.wrapper>p:nth-child(2) {
     font-weight: 800;
 }
-.user-buttons{
+
+.user-buttons {
     grid-column: 2/3;
-    grid-row:2/3;
-    display:grid;
-    grid-template-columns:  repeat(3, min(5rem,300px));
-    gap:30px;
-    margin-right:100px;
+    grid-row: 2/3;
+    display: grid;
+    grid-template-columns: repeat(3, min(5rem, 300px));
+    gap: 30px;
+    margin-right: 100px;
     justify-content: end;
     align-items: center;
 }
-button{
+
+button {
     background-color: rgb(52, 123, 255);
     border-style: none;
-    border-radius:20px;
-    color:white;
-    font-size:1.1rem;
-    padding:0.6rem;
+    border-radius: 20px;
+    color: white;
+    font-size: 1.1rem;
+    padding: 0.6rem;
 }
-.content{
+
+.content {
+    padding-left: 3rem;
     background-color: rgb(233, 232, 232);
     grid-row: 2/3;
     grid-column: 1/2;
-    display:grid;
+    display: grid;
+    grid-template-columns: 5fr 1fr 10rem;
 }
-.articles{
-    display:grid;
-    grid-template-columns: repeat(auto-fit, 300px);
-    gap:20px;
+
+.articles {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 400px);
+    gap: 2rem;
+    grid-row:2/5;
+    margin-right:50px;
 }
-article{
-    display:grid;
+
+article {
+    display: grid;
+    border-left-style: solid;
+    border-width: 10px;
+    border-radius: 0.5em;
+    border-left-color: orange;
+    background-color: white;
+    padding: 1em;
+    padding-right: 0.2em;
+    gap:0.8em;
     grid-template-columns: auto 1.5rem 1.5rem 1.5rem;
 }
-article>p{
-    grid-column:1/5;
+
+article p {
+    grid-column: 1/5;
 }
-article>div:first-child{
-    grid-column:1/2;
+
+article p:nth-child(3) {
+    grid-column: 1/5;
 }
-article>div:nth-child(2){
-    grid-column:2/3;
+
+article> div:first-child {
+    grid-column: 1/2;
 }
-article>div:nth-child(3){
-    grid-column:3/4;
+
+article>div:nth-child(3) {
+    grid-column: 2/3;
+}
+
+article>div:nth-child(4) {
+    grid-column: 3/4;
+}
+
+.announcements {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 350px);
+    grid-column: 2/3;
+    grid-row: 2/3;
+    background-color: white;
+    border-radius: 1em;
+    grid-template-rows: repeat(2, max(200px, auto-fit));
+}
+
+.announcement {
+    padding: 2em;
+    border-bottom: 1px solid grey;
+}
+
+#trending {
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+
+.trending {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 350px);
+    grid-column: 2/3;
+    grid-row: 4/6;
+    background-color: white;
+    border-radius: 1em;
+    grid-template-rows: repeat(2, min(150px, 10em));
+}
+
+.trend {
+    display: grid;
+    grid-template-columns: 6rem 1fr;
+    align-items: center;
+    padding-left: 0.5rem;
+    gap: 0.2rem;
+}
+
+h1 {
+    padding-top: 1em;
+    padding-bottom: 0.2em;
 }
