--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ article>div:nth-child(4) {
     display: grid;
     grid-template-columns: repeat(auto-fill, 350px);
     grid-column: 2/3;
-    grid-row: 4/6;
+    grid-row: 4/5;
     background-color: white;
     border-radius: 1em;
     grid-template-rows: repeat(2, min(150px, 10em));
@@ -225,11 +225,25 @@ article>div:nth-child(4) {
 .trend {
     display: grid;
     grid-template-columns: 6rem 1fr;
-    align-items: center;
+    grid-template-rows:1rem 5rem;
     padding-left: 0.5rem;
     gap: 0.2rem;
 }
-
+.trend>img{
+    grid-row:1/3;
+    grid-column:1/2;
+}
+.trend>h3{
+    padding:0.5em;
+    grid-row:1/2;
+    grid-column:2/3;
+}
+.trend>p{
+    padding:1rem;
+    font-weight:800;
+    grid-row:2/3;
+    grid-column:2/3; 
+}
 h1 {
     padding-top: 1em;
     padding-bottom: 0.2em;
